Fix README - clean version